# open-hands-fastapi-kafka

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
scripts/: build.bat  build.sh
src/openhands_event_tracker/: app.py  kafka_client.py
