[metadata]
name = openhands-event-tracker
description = FastAPI application for event tracking with Kafka integration
author = OpenHands
author_email = openhands@all-hands.dev
license = MIT
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/venkunikku/open-hands-fastapi-kafka
project_urls =
    Bug Tracker = https://github.com/venkunikku/open-hands-fastapi-kafka/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: FastAPI

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    fastapi>=0.104.1
    uvicorn>=0.24.0
    confluent-kafka>=2.3.0
    pydantic>=2.5.1

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    event-tracker = openhands_event_tracker.app:main